--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
   "homepage": "https://github.com/sojida/iReporter#readme",
   "dependencies": {
     "express": "^4.16.4"
+  },
+  "devDependencies": {
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
