--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An anti-corruption movement",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --require babel-register ./test/*.js --exit"
   },
   "repository": {
     "type": "git",
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/sojida/iReporter#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "babel-register": "^6.26.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "express": "^4.16.4",
+    "mocha": "^5.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
