--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "An anti-corruption movement",
   "main": "app.js",
   "scripts": {
+    "start": "babel-node app.js",
+    "dev": "nodemon app.js --exec babel-watch",
     "test": "mocha --require babel-register ./test/*.js --exit"
   },
   "repository": {
