--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
     "express": "^4.16.4",
+    "joi": "^14.3.0",
     "mocha": "^5.2.0"
   },
   "devDependencies": {
