--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "babel-node app.js",
     "dev": "nodemon app.js --exec babel-watch",
-    "test": "mocha --require babel-register ./test/*.js --exit",
+    "test": "mocha --require babel-register ./test/*.test.js --exit",
     "coverage": "nyc --reporter=html --reporter=text --reporter=lcov mocha --reporter spec --require babel-register ./test/*.js --exit",
     "coveralls": "npm run coverage -- --report lcovonly && cat coverage/lcov.info | coveralls"
   },
