--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "chai-http": "^4.2.0",
     "express": "^4.16.4",
     "joi": "^14.3.0",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "babel-cli": "^6.26.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
