--- a/package.json
+++ b/package.json
@@ -45,5 +45,9 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "nyc": "^13.1.0"
+  },
+
+  "engines": {
+    "node": "10.x"
   }
 }
