--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start-build": "npm run build && node ./build/app.js",
     "start": "npm run start-build && node /build/app.js",
     "dev": "nodemon /server/app.js --exec babel-watch",
-    "test": "mocha --require babel-register ./test/*.test.js --exit",
-    "coverage": "nyc --reporter=html --reporter=text --reporter=lcov mocha --reporter spec --require babel-register ./test/*.js --exit",
+    "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --require babel-register ./test/*.test.js --exit",
+    "coverage": "nyc --reporter=html --reporter=text --reporter=lcov mocha --reporter spec --require babel-register ./test/*test.js --exit",
     "coveralls": "npm run coverage -- --report lcovonly && cat coverage/lcov.info | coveralls"
   },
   "repository": {
