--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "npm run clean && npm run build-babel",
     "start-build": "npm run build && node ./build/app.js",
     "start": "npm run start-build && node /build/app.js",
-    "dev": "nodemon /server/app.js --exec babel-watch",
+    "dev": "nodemon ./server/app.js --exec babel-watch",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --require babel-register ./test/*.test.js --exit",
     "coverage": "nyc --reporter=html --reporter=text --reporter=lcov mocha --reporter spec --require babel-register ./test/*test.js --exit",
     "coveralls": "npm run coverage -- --report lcovonly && cat coverage/lcov.info | coveralls"
