--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,9 @@ node_js: "stable"
 notifications:
   email: false
 
+services:
+  - postgresql
+
 cache:
   directories:
     - "node_modules"
@@ -17,7 +20,6 @@ before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
-  - cp config/database.yml.travis config/database.yml
   - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
