--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ cache:
 env:
     global:
       - CC_TEST_REPORTER_ID=1c586984312150bae15f7b4aecd26eccd5b0adb54c2ae1eb27443a478fdff045
-      - DATABASE_URL=postgres://postgres@localhost:5432/ireporterpsql
+      - DATABASE_URL=postgres://postgres@localhost:5432/travis_ci_test
 
 before_script:
   - npm i nyc --save-dev
