--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "build": "npm run clean && npm run build-babel",
     "start-build": "npm run build && node ./build/app.js",
     "start": "npm run start-build && node /build/app.js",
-    "heroku": "npm start && npm run createdb",
+    "heroku": "npm start && npm run createdb2",
     "dev": "nodemon ./server/app.js --exec babel-watch",
+    "createdb2": "node ./build/db/createdb.js",
     "createdb": "babel-node ./server/db/createdb.js",
     "dropdb": "babel-node ./server/db/dropdb.js",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --require babel-register ./test/*.test.js --timeout 10000 --exit",
