--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,9 @@
 {
     "extends": "airbnb-base",
     "rules": {
-        "linebreak-style": 0
+        "linebreak-style": 0,
+        "no-restricted-globals": ["error", "event", "fdescribe"]
+        
     }
+
 }
