--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ env:
 
 before_script:
   - npm i nyc --save-dev
+  - npm run drop-create
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
