included  script to drop and create db

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "nodemon ./server/app.js --exec babel-watch",
     "createdb": "babel-node ./server/db/createdb.js",
     "dropdb": "babel-node ./server/db/dropdb.js",
+    "drop-create": "npm run dropdb && npm run createdb",
     "test": "nyc --reporter=html --reporter=text --reporter=lcov mocha --require babel-register ./test/*.test.js --timeout 10000 --exit",
     "coverage": "nyc --reporter=html --reporter=text --reporter=lcov mocha --reporter spec --require babel-register ./test/*test.js --exit",
     "coveralls": "npm run coverage -- --report lcovonly && cat coverage/lcov.info | coveralls"
