--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcrypt": "^3.0.2",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "joi": "^14.3.0",
