--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "express-fileupload": "^1.0.0",
     "joi": "^14.3.0",
     "jsonwebtoken": "^8.4.0",
     "mocha": "^5.2.0",
